mk8s-snipeit/snipeit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snipeit
  namespace: snipeit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snipeit
  template:
    metadata:
      labels:
        app: snipeit
    spec:
      containers:
        - name: snipeit
          image: snipe/snipe-it:v8.3.7
          ports:
            - containerPort: 80
          volumeMounts:
            - name: snipeit-volume
              mountPath: /var/www/html
      volumes:
        - name: snipeit-volume
          persistentVolumeClaim:
            claimName: snipeit-pvc
