mk8s-snipeit/snipeit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: snipeit
  namespace: snipeit
spec:
  selector:
    app: snipeit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
