mk8s-snipeit/snipeit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snipeit-ingress
  namespace: snipeit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: plaset.it-ops.my.id  # Ganti dengan domain yang sesuai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snipeit
            port:
              number: 80
